# integration-tests

./: .gitignore  .pnp.cjs  .yarnrc  .yarnrc.yml  Cargo.toml  Containerfile  Gemfile  Makefile  README.md  app.ts  artifacts.lock.yaml  cachito_gomod.go  generate-holy-hand-grenade.js  generic_lockfile.yaml  go.mod  go.sum  go.work  go.work.sum  index.js  main.go  package-lock.json  package.json  packages.py  pyproject.toml  requirements-build.in  requirements-build.txt  requirements.in  requirements.txt  rpms.in.yaml  rpms.input.yaml  rpms.lock.yaml  setup.cfg  setup.py
another-project/: rpms.lock.yaml
api/: go.mod
baz/: package.json
eggs-module/: go.mod  go.sum  main.go
first-pkg/: index.js  package.json
first_pkg/: package-lock.json  package.json  requirements.in  requirements.txt  setup.cfg
first_pkg/baz/: package.json
foo/: package.json
gomod-package/: go.mod  hello.go
hi/hiii/: go.mod
npm-package/: index.js  package-lock.json  package.json
package/: main.py
package-a/: example.tgz  package.json
package-b/: example.tgz  package.json
quux/: quux.gemspec
second-pkg/: index.js  package.json
second_pkg/: package-lock.json  package.json  requirements-extra.in  requirements-extra.txt  requirements.in  requirements.txt  setup.cfg
spam-module/: go.mod  go.sum
src/: main.rs
third-pkg/: index.js  package.json
third_pkg/: package-lock.json  package.json  setup.cfg
this-project/: rpms.lock.yaml
twenty/: go.mod  go.sum  main.go
twentyone/: go.mod  twentyone.go
workspace_modules/: go.work  go.work.sum
workspace_modules/echo/: go.sum
(+7 files in other folders)
